tests/jsr335/Semantics/LambdaExpressions/ReservedKeyword/ShouldFail/syntax02/Test.java


public class Test {

	public class _ {
		
	}
	
	public static void main(String[] args) {
		
    }
	
	
}